Vorläufiges SYCL-Kapitel fertig

--- a/alpaka.tex
+++ b/alpaka.tex
@@ -211,7 +211,7 @@ die die reinen Zeiger kapseln. Im Gegensatz zu SYCL sind die Puffer auf dem Host
 und Device jedoch voneinander unabhängig. Es ist also nicht möglich, einen
 gemeinsamen Puffer zu erzeugen, der die notwendigen Kopien für den Programmierer
 unsichtbar im Hintergrund durchführt, wie dies in
-Abschnitt~\ref{sycl:ueberblick:saxpy:buffer} für SYCL demonstriert wurde.
+Abschnitt~\ref{sycl:ueberblick:axpy:buffer} für SYCL demonstriert wurde.
 
 Für die Erzeugung von Puffern ist es zunächst nötig, die gewünschte Größe des
 Puffers durch eine spezielle Datenstruktur zu definieren, wie der
