--- a/glossar.tex
+++ b/glossar.tex
@@ -36,6 +36,8 @@
                         description = {Alpaka- und SYCL-Bezeichnung für den Teil des Rechners, der den Kontrollfluss steuert}}
 \newglossaryentry{iigls}{name = Initiation Interval,
                          description = {Anzahl der Zyklen zwischen dem Ausführungsbeginn aufeinanderfolgender Schleifeniterationen}}
+\newglossaryentry{iso}{name = \textit{International Organization for Standardization},
+                       description = {Internationale Vereinigung der Normungsorganisationen, umfasst unter anderen das Deutsche Institut für Normung (DIN)}}
 \newglossaryentry{spir}{name = SPIR,
                         description = {\textit{Standard Portable Intermediate Language}, offene Zwischencode-Sprache}}
 \newglossaryentry{sycl}{name = SYCL,
