--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,7 @@
 \usepackage[acronyms,nonumberlist,nopostdot,toc,savewrites,xindy]{glossaries}
 \usepackage[ngerman=ngerman-x-latest]{hyphsubst}
 \usepackage{isodate}
+\usepackage{makecell}
 \usepackage[newfloat]{minted}
 \usepackage{multirow}
 \usepackage{nth}
